--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
   
   <div class = "topnav"><a class = "active" href = "">Google Extensions</a>
-  <a href = "">Other Things For School</a>
+  <a href = "https://lrivers322.github.io/index">Other Things For School</a>
   <a href = "">VHS Links</a>
   <input type = "text" placeholder = "search">
   </div>
